--- a/config/packages/ibexa.yaml
+++ b/config/packages/ibexa.yaml
@@ -92,6 +92,27 @@ ibexa:
 
         site:
             languages: [eng-GB]
+            content_view:
+                full:
+                    home_page:
+                        controller: ibexa_query::pagingQueryAction
+                        template: full/home_page.html.twig
+                        match:
+                            Id\Location: 2
+                        params:
+                            query:
+                                query_type: Ride
+                                limit: 1
+                                assign_results_to: rides
+                    ride:
+                        template: full/ride.html.twig
+                        match:
+                            Identifier\ContentType: ride
+                line:
+                    ride:
+                        template: line/rides.html.twig
+                        match:
+                            Identifier\ContentType: ride
 
     url_alias:
         slug_converter:
