ajout d'un formulaire d'inscription utilisateur pour accéder au panneau d'admin, traduction du site en français, nettoyage code, modification du fichier readme

--- a/config/packages/views.yaml
+++ b/config/packages/views.yaml
@@ -1,4 +1,7 @@
 ibexa:
+    ui:
+        translations:
+            enabled: true
     system:
         site:
             content_view:
@@ -36,3 +39,7 @@ ibexa:
                         template: line/landmark.html.twig
                         match:
                             Identifier\ContentType: landmark
+            user_registration:
+                templates:
+                    form: user/registration_form.html.twig
+                    confirmation: user/registration_confirmation.html.twig
