--- a/config/packages/ibexa.yaml
+++ b/config/packages/ibexa.yaml
@@ -1,5 +1,5 @@
 parameters:
-    locale_fallback: en
+    locale_fallback: fr
 
     # Identifier used to generate the CSRF token. Commenting this line will result in authentication
     # issues both in AdminUI and REST calls
@@ -91,7 +91,7 @@ ibexa:
                 default_icon_set: public_icons
 
         site:
-            languages: [eng-GB]
+            languages: [fra-FR, eng-GB]
 
     url_alias:
         slug_converter:
